--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -72,10 +72,21 @@ $borderColor: #999;
     }
 }
 .context-menu {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 320px;
+    position: fixed;
+    width: 240px;
+    //overflow: hidden;
+    border: 1px solid #eee;
+    box-shadow: 0 1px 6px rgba(0,0,0,.117647), 0 1px 4px rgba(0,0,0,.117647);
+    background-color: #fff;
+    .mu-menu {
+        max-width: 100%;
+    }
+    .mu-menu-list {
+        max-width: 100%;
+    }
+    .mu-menu-item {
+        //max-width: 100%;
+    }
 }
 
 .handler-box {
@@ -126,5 +137,39 @@ $borderColor: #999;
         top: 50%;
         transform: translateY(-50%);
         cursor: w-resize;
+    }
+}
+
+// 辅助线
+.lines {
+    .line-horizontal {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        cursor: row-resize;
+        //background-color: #f00;
+        .line {
+            position: absolute;
+            left: 1px;
+            width: 100%;
+            height: 1px;
+            background-color: #333;
+        }
+    }
+    .line-vertical {
+        position: absolute;
+        left: 100px;
+        width: 5px;
+        height: 100%;
+        cursor: col-resize;
+        //background-color: #f00;
+        .line {
+            position: absolute;
+            left: 1px;
+            width: 1px;
+            height: 100%;
+            background-color: #333;
+        }
     }
 }
